--- a/client-fggc/package.json
+++ b/client-fggc/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.25.49"
   },
   "devDependencies": {
